@@ -1,3 +1,4 @@
+-Fixed sscanf bug in rdmask (found and fixed by Guilhem Lavaux)
 -Updated matlab plotting script to work well for smaller regions of sky
 -Modified find_complement.sh and make_allsky.sh to take arguments for snap and multiple intersection tolerances
 -Added option -T to rasterize to switch between "dicing", i.e., averaging the weights of 
